--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
             <version>4.2.2</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.wso2.carbon.deployment</groupId>
+            <artifactId>org.wso2.carbon.webapp.mgt</artifactId>
+            <version>4.5.3</version>
+            <scope>provided</scope>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>javax.servlet</groupId>-->
             <!--<artifactId>javax.servlet-api</artifactId>-->
